# krunic

./: .gitignore  README.md  export_requirements.sh  krunic.py  main.py  pyproject.toml  requirements.txt  runic.py  sky-runic.yaml  sky-runic_T4:4.yaml  sky-runic_twonodes.yaml  sky-tunic.yaml  sky-tunic_T4:4.yaml  sky-tunic_twonodes.yaml  spot-tunic.yaml  tunic.py  tunic_plotter.py  ureq.sh
.github/workflows/: test.yml
krunic/: cluster_requirements.txt  common_krunic.py  cvic.py  krunic.py  requirements.txt  tunic.py  tunic_plotter.py
tests/: test_cvic.py  test_krunic.py  test_tunic.py
