[project]
name = "runic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "numpy>=2.4.3",
    "optuna>=4.7.0",
    "ray[train,tune]>=2.54.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.25",
    "torch==2.8.0",
]
